# libratrack

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  check.sh  setup.ps1  setup.sh
data/: books.csv  members.csv
include/: Book.h  Catalog.h  DateUtils.h  FineCalculator.h  Loan.h  LoanManager.h  Member.h  MemberManager.h  NotificationService.h  ReportGenerator.h  SearchEngine.h  Statistics.h
src/: Book.cpp  Catalog.cpp  DateUtils.cpp  FineCalculator.cpp  Loan.cpp  LoanManager.cpp  Member.cpp  MemberManager.cpp  NotificationService.cpp  ReportGenerator.cpp  SearchEngine.cpp  Statistics.cpp  main.cpp
tests/public/: test_book_public.cpp  test_catalog_public.cpp  test_date_utils_public.cpp  test_fine_calculator_public.cpp  test_integration_public.cpp  test_loan_manager_public.cpp  test_loan_public.cpp  test_member_manager_public.cpp  test_member_public.cpp  test_notifications_public.cpp  test_report_public.cpp  test_search_public.cpp  test_statistics_public.cpp
